--- a/employee_register/templates/employee_register/employee_list.html
+++ b/employee_register/templates/employee_register/employee_list.html
@@ -38,7 +38,7 @@
         </tbody>
     </table>
 <a href="{% url 'employee_insert' %}" class="btn btn-secondary btn-block btn-lg" >
-                    <i class="fas fa-stream"></i>Back to list
+                    <i class="fas fa-stream"></i>Back to Form
                 </a>
 {% endblock content %}
 
